-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
1. If a pipe file exist in a directory, lfs project command stops there.
Create a pipe file. [root@s17 lustre]# mkfifo tmp/pipe Set project ID. [root@s17 lustre]# lfs project -srp 500 tmp <This command does not return...>
2.If a symbolic link with missing target exists, lfs project command returns error and does not process remaining entries.
Create a symbolic file and remove target. [root@s17 tmp]# ls -l total 0 -rw-r--r-- 1 root root 0 Apr 26 13:47 aaa -rw-r--r-- 1 root root 0 Apr 26 13:47 bbb lrwxrwxrwx 1 root root 18 Apr 26 13:50 ccc -> ../test1/4MB_file1 -rw-r--r-- 1 root root 0 Apr 26 13:52 ddd [root@s17 tmp]# rm -f ../test1/4MB_file1 [root@s17 tmp]# cd .. [root@s17 lustre]# lfs project -r tmp/ 500 P tmp//ddd 500 P tmp//bbb lfs: failed to open 'tmp//ccc': No such file or directory lfs: failed to handle dir 'tmp/': No such file or directory [root@s17 lustre]# Information about "aaa" is not displayed.
- is related to
-
LU-11689 lfs project should proceed all dirs if hit errors
-
- Resolved
-