LU-10986 lfs: make lfs project tolerant errors

This patch try to fix following problems:
1)command hang on pipe file, reproduced by following steps:
 $ mkfifo tmp/pipe
 $ lfs project -srp 500 tmp -->this will never finish.

Problem is opening a pipe file will be blocked in default
without O_NOBLOCK or O_NODELAY flag.

2)If a symbolic link with missing target exists, command
returns error and does not process remaining entries.

we should fix this problem by allowing command process
further even it hit some errors.

3)fix a wrong check for MAX_PATH

Lustre-change: https://review.whamcloud.com/32243
Lustre-commit: d189024bd3065c69c51ba90f6228c3ea28419dd0

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I7d08a7547e6b1351a1eff23063da6cd9c4cdc5e3
Reviewed-on: https://review.whamcloud.com/34102
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>